--- a/ShaderBranchingPerformance/Packages/manifest.json
+++ b/ShaderBranchingPerformance/Packages/manifest.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "com.unity.ai.navigation": "2.0.0",
     "com.unity.collab-proxy": "2.2.0",
-    "com.unity.ide.rider": "3.0.26",
+    "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.memoryprofiler": "1.1.0",
+    "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.performance.profile-analyzer": "1.2.2",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "16.0.4",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
